@@ -83,7 +83,7 @@
 #define PACKAGE_NAME "libcoap"
 
 /* Define to the full name and version of this package. */
-#define PACKAGE_STRING "libcoap 4.3.2rc1"
+#define PACKAGE_STRING "libcoap 4.3.3"
 
 /* Define to the one symbol short name of this package. */
 #define PACKAGE_TARNAME "libcoap"
@@ -92,7 +92,7 @@
 #define PACKAGE_URL "https://libcoap.net/"
 
 /* Define to the version of this package. */
-#define PACKAGE_VERSION "4.3.2rc1"
+#define PACKAGE_VERSION "4.3.3"
 
 #define WITH_CONTIKI 1
 
