@@ -313,10 +313,10 @@
 #define PACKAGE_NAME "libcoap"
 
 /* Define to the version of this package. */
-#define PACKAGE_VERSION "4.3.2"
+#define PACKAGE_VERSION "4.3.3"
 
 /* Define to the full name and version of this package. */
-#define PACKAGE_STRING "libcoap 4.3.2"
+#define PACKAGE_STRING "libcoap 4.3.3"
 
 /* Define to 1 if you have the ANSI C header files. */
 #define STDC_HEADERS 1
